DequeueList unit tests